--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <title>Pape Scissors Stone</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+        <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"/>
     </head>
     <body>
         <div class="card">
             <div class="player">
                 <i class="las la-robot"></i>
             </div>
-            <div class="carousel">
+            <div class="carousel" id="carousel_cpu">
                 <div class="carousel-item">
                     <i class="las la-hand-rock"></i>
                 </div>
@@ -23,11 +23,12 @@
             </div>
         </div>
         <div class="game_options">
-            <button>Play</button>
-            <p>Chooese paper, scissors or stones</p>
+            <button onClick="startGame()">Play</button>
+            <p>Choose paper, scissors or stones</p>
+            <p id="result"></p>
         </div>
         <div class="card">
-            <div class="carousel">
+            <div class="carousel" id="carousel_player">
                 <div class="carousel-item">
                     <i class="las la-hand-rock"></i>
                 </div>
@@ -42,5 +43,7 @@
                 <i class="las la-user-secret"></i>
             </div>
         </div>
+        
     </body>
+    <script src="game.js"></script>
 </html>
